fixing image sizing, waimeavalley image must be re-cropped and uploaded

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -673,7 +673,7 @@ h1{
   font-weight: 2px;
 }
 .cardRow{
-  max-height: 30%;
+  max-height: 28%;
 }
 .cardImage{
   height: 290px;
